@@ -799,7 +799,7 @@ function handle_host_diag_result(ident, response_text) {
     retry.style.display = 'inline';
 }
 
-function start_host_diag_test(ident, hostname) {
+function start_host_diag_test(ident, hostname, transid) {
     var log   = document.getElementById(ident + '_log');
     var img   = document.getElementById(ident + '_img');
     var retry = document.getElementById(ident + '_retry');
@@ -817,6 +817,6 @@ function start_host_diag_test(ident, hostname) {
     img.src = "images/icon_loading.gif";
     log.innerHTML = "...";
     get_url("wato_ajax_diag_host.py?host=" + escape(hostname) + "&_test=" + escape(ident)
-            + '&_transid=-1' + vars,
+            + '&_transid=' + transid + vars,
               handle_host_diag_result, ident);
 }
